test/corpus/subroutines
================================================================================
Small declaration
================================================================================
sub foo
{
  123;
}
--------------------------------------------------------------------------------

(source_file
  (subroutine_declaration_statement
    name: (bareword)
    body: (block
      (expression_statement
        (number)))))

================================================================================
Small anonymous
================================================================================
sub { $x };
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (anonymous_subroutine_expression
      (block
        (expression_statement
          (scalar
            (varname)))))))

================================================================================
Attributes on named subs
================================================================================
sub abc :lvalue { }
sub def :lvalue const { }
sub ghi :lvalue :const { }
sub jkl : { }
--------------------------------------------------------------------------------

(source_file
  (subroutine_declaration_statement
    (bareword)
    (attrlist
      (attribute
        (attribute_name)))
    (block))
  (subroutine_declaration_statement
    (bareword)
    (attrlist
      (attribute
        (attribute_name))
      (attribute
        (attribute_name)))
    (block))
  (subroutine_declaration_statement
    (bareword)
    (attrlist
      (attribute
        (attribute_name))
      (attribute
        (attribute_name)))
    (block))
  (subroutine_declaration_statement
    (bareword)
    (block)))

================================================================================
Attributes on anonymous subs
================================================================================
sub :lvalue {};
sub :lvalue const {};
sub :lvalue :const {};
sub : {};
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (anonymous_subroutine_expression
      (attrlist
        (attribute
          (attribute_name)))
      (block)))
  (expression_statement
    (anonymous_subroutine_expression
      (attrlist
        (attribute
          (attribute_name))
        (attribute
          (attribute_name)))
      (block)))
  (expression_statement
    (anonymous_subroutine_expression
      (attrlist
        (attribute
          (attribute_name))
        (attribute
          (attribute_name)))
      (block)))
  (expression_statement
    (anonymous_subroutine_expression
      (block))))

================================================================================
Attributes with values
================================================================================
sub abc :title(Boo!) { }
sub def :title(Boo(here)) { }
sub ghi :title(Boo\(is fine) { }

sub :title(Boo!) { }
--------------------------------------------------------------------------------

(source_file
  (subroutine_declaration_statement
    (bareword)
    (attrlist
      (attribute
        (attribute_name)
        (attribute_value)))
    (block))
  (subroutine_declaration_statement
    (bareword)
    (attrlist
      (attribute
        (attribute_name)
        (attribute_value)))
    (block))
  (subroutine_declaration_statement
    (bareword)
    (attrlist
      (attribute
        (attribute_name)
        (attribute_value)))
    (block))
  (expression_statement
    (anonymous_subroutine_expression
      (attrlist
        (attribute
          (attribute_name)
          (attribute_value)))
      (block))))

================================================================================
Prototypes or Signatures
================================================================================
sub foo0 () { }
sub foo1 ($) { }
sub fooN (@) { }

sub bar1 ($arg) { }
sub bar3 ($one = 1, $two = 2, $three = ($one + $two)) { }
sub barN ($x, $y, @z) { }
--------------------------------------------------------------------------------

(source_file
  (subroutine_declaration_statement
    (bareword)
    (prototype_or_signature)
    (block))
  (subroutine_declaration_statement
    (bareword)
    (prototype_or_signature)
    (block))
  (subroutine_declaration_statement
    (bareword)
    (prototype_or_signature)
    (block))
  (subroutine_declaration_statement
    (bareword)
    (prototype_or_signature)
    (block))
  (subroutine_declaration_statement
    (bareword)
    (prototype_or_signature)
    (block))
  (subroutine_declaration_statement
    (bareword)
    (prototype_or_signature)
    (block)))
